# engine

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: canvas_export.csv  comprehensive_rubric.yaml  example_rubric.yaml  example_submissions.csv  results.yaml  results_detailed.csv  results_summary.csv  usage_examples.py
gradeflow_engine/: __init__.py  cli.py  core.py  io.py  models.py  protocols.py  py.typed  sandbox.py  schema.py  types.py
gradeflow_engine/exports/: __init__.py  base.py  canvas.py  csv.py  registry.py  utils.py  yaml.py
gradeflow_engine/rubrics/: examplify.py
gradeflow_engine/rules/: __init__.py  base.py  registry.py  utils.py
gradeflow_engine/rules/assumption_set/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/composite/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/conditional/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/exact_match/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/keyword/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/length/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/multiple_choice/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/numeric_range/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/programmable/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/regex/: README.md  __init__.py  model.py  processor.py
gradeflow_engine/rules/similarity/: README.md  __init__.py  model.py  (+1 more)
tests/: test_cli.py  test_core.py  test_integration.py  test_io.py  test_registry.py  test_sandbox.py  test_schema.py  test_utils.py
tests/rules/: __init__.py  test_assumption_set.py  test_composite.py  test_conditional.py  test_exact_match.py  test_keyword.py  test_length.py  test_multiple_choice.py  test_numeric_range.py  test_programmable.py  test_regex.py  test_similarity.py
